# nomitomo_app

./: .gitignore  README.md
backend/: .env  local.db  pyproject.toml  verify_api.py  verify_pivot.py  verify_ws.py
backend/app/: dependencies.py  main.py
backend/app/application/: chat_usecase.py  create_event_usecase.py  list_events_usecase.py  list_recruiting_users_usecase.py  register_user_usecase.py  shop_usecase.py  toggle_recruiting_usecase.py
backend/app/core/: chat_ws_manager.py  config.py  security.py
backend/app/domain/: chat.py  event.py  shop.py  user.py
backend/app/infrastructure/: chat_repository.py  database.py  event_repository.py  models.py  shop_repository.py  user_repository.py
backend/app/presentation/: auth_router.py  chat_router.py  event_router.py  shop_router.py  user_router.py
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/core/network/: dio_provider.dart  dio_provider.g.dart
mobile/lib/data/repositories/: auth_repository.dart  chat_repository.dart  (+3 more)
mobile/linux/: CMakeLists.txt
mobile/linux/runner/: my_application.cc
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
mobile/windows/runner/: Runner.rc  main.cpp
stitch_/chat_messages/: code.html
stitch_/drinking_buddy_discovery/: code.html
stitch_/user_profile_details/: code.html
stitch_/アプリ紹介・ご利用の流れ/: code.html
(+29 files in other folders)
